--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -7,9 +7,49 @@
 }
 
 @font-face {
-  font-family:'PN-EB';
+  font-family: 'PN-EB';
   src: url('ProximaNova-Extrabld.eot?#iefix') format('embedded-opentype'),  url('ProximaNova-Extrabld.otf')  format('opentype'),
   url('ProximaNova-Extrabld.woff') format('woff'), url('ProximaNova-Extrabld.ttf')  format('truetype'), url('ProximaNova-Extrabld.svg#ProximaNova-Extrabld') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+@font-face {
+  font-family:'PN-R';
+  src: url('ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),  url('ProximaNova-Regular.otf')  format('opentype'),
+  url('ProximaNova-Regular.woff') format('woff'), url('ProximaNova-Regular.ttf')  format('truetype'), url('ProximaNova-Regular.svg#ProximaNova-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PN-B';
+  src: url('ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),  url('ProximaNova-Bold.otf')  format('opentype'),
+  url('ProximaNova-Bold.woff') format('woff'), url('ProximaNova-Bold.ttf')  format('truetype'), url('ProximaNova-Bold.svg#ProximaNova-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family:'PN-Thin';
+  src: url('ProximaNovaT-Thin.eot?#iefix') format('embedded-opentype'),  url('ProximaNovaT-Thin.otf')  format('opentype'),
+  url('ProximaNovaT-Thin.woff') format('woff'), url('ProximaNovaT-Thin.ttf')  format('truetype'), url('ProximaNovaT-Thin.svg#ProximaNovaT-Thin') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
+.jersey{
+	font-family:'Jersey';
+}
+.proxima-eb{
+	font-family:'PN-EB';
+}
+.proxima-r{
+	font-family:'PN-R';
+}
+.proxima-b{
+	font-family:'PN-B';
+}
+.proxima-t{
+	font-family:'PN-Thin';
 }
